# sc-lego-loam-ndt

src/: 看我.txt
src/SC-LeGO-LOAM/SC-LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
src/SC-LeGO-LOAM/SC-LeGO-LOAM/LeGO-LOAM/include/: utility.h
src/SC-LeGO-LOAM/SC-LeGO-LOAM/LeGO-LOAM/launch/: run.launch  test.rviz
src/SC-LeGO-LOAM/SC-LeGO-LOAM/LeGO-LOAM/src/: imageProjection.cpp  mapOptmization.cpp  transformFusion.cpp
src/ndt_localizer/: CMakeLists.txt
src/ndt_localizer/cfgs/: rock-auto.rviz
src/ndt_localizer/include/: gicp.h  ndt.h
src/ndt_localizer/launch/: gicp_localizer.launch  map_loader.launch  ndt_localizer.launch  points_downsample.launch  static_tf.launch
src/ndt_localizer/nodes/: gicp.cpp  map_loader.cpp  ndt.cpp  points_downsampler.cpp
src/pointsMap/: pcl_viewer  trajectory.pcd
